--- a/backend/env/backend.env
+++ b/backend/env/backend.env
@@ -1,1 +1,12 @@
+MONGO_URI=mongodb://mongo:27017
+MONGO_DB=reelsdb
+REDIS_URL=redis://redis:6379/0
+MINIO_ENDPOINT=minio:9000
+MINIO_ACCESS=minioadmin
+MINIO_SECRET=minioadmin
+MINIO_SECURE=false
+APIFY_TOKEN=your_apify_token_here
+IAMPORT_API_KEY=your_iamport_api_key
+IAMPORT_API_SECRET=your_iamport_api_secret
+SECRET_KEY=supersecretdevkey
 
