--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,1 +1,8 @@
+FROM node:20-alpine
+WORKDIR /usr/src/app
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
+COPY . .
+RUN yarn build
+CMD ["yarn", "start"]
 
