--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,1 +1,34 @@
+name: CI/CD
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Build backend image
+        run: |
+          docker build -t myorg/reels-backend:latest ./backend
+      - name: Build frontend image
+        run: |
+          docker build -t myorg/reels-frontend:latest ./frontend
+      # Optionally push images to registry (Docker Hub/GHCR) - credentials needed.
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /home/ubuntu/project-root
+            git pull origin main
+            docker-compose pull
+            docker-compose up -d --build
 
