--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:20-alpine
 WORKDIR /usr/src/app
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+COPY package.json ./
+RUN npm install
 COPY . .
-RUN yarn build
-CMD ["yarn", "start"]
+RUN npm run build
+CMD ["npm", "start"]
 
