--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "serve -s build -l 3000",
+    "start": "serve -s dist -l 3000",
     "dev": "vite",
     "build": "vite build"
   },
