--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "recharts": "^2.4.0",
     "tailwindcss": "^3.4.0"
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
