--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "axios": "^1.4.0",
     "recharts": "^2.4.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
